--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 	<tr >
                 		<td id="all-rows">
                 			<div class="form-group row">
-							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Value1</label>
+							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Params</label>
 							  <div class="col-xs-10">
 							    <input class="form-control" type="text" id="example-text-input-1" disabled>
 							  </div>
@@ -92,7 +92,7 @@
                 	<tr >
                 		<td id="all-rows">
                 			<div class="form-group row">
-							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Value2</label>
+							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Response_Code</label>
 							  <div class="col-xs-10">
 							    <input class="form-control" type="text" id="example-text-input-2" disabled>
 							  </div>
@@ -102,7 +102,7 @@
                 	<tr >
                 		<td id="all-rows">
                 			<div class="form-group row">
-							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Value3</label>
+							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Response_Type</label>
 							  <div class="col-xs-10">
 							    <input class="form-control" type="text" id="example-text-input-3" disabled>
 							  </div>
@@ -112,7 +112,7 @@
                 	<tr >
                 		<td id="all-rows"> 
                 		<div class="form-group row">
-							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Value4</label>
+							  <label for="example-text-input" class="col-xs-2 col-form-label" style="font-size: 20px; margin-top:2px;">Response</label>
 							  <div class="col-xs-10">
 							    <input class="form-control" type="text" id="example-text-input-4" disabled>
 							  </div>
